fix(*): fix cherry overflow & fix customHook could config params on the Cherry config (#61)

--- a/src/sass/cherry.scss
+++ b/src/sass/cherry.scss
@@ -19,7 +19,7 @@
   height: 100%;
   min-height: 400px;
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
 
   .cherry-editor,
   .cherry-previewer {
